# 5311-proj-assignment

./: .gitignore  CMakeLists.txt  README.md
src/: multithreading.c  multithreading.h  p_merge_sort.c  p_merge_sort.h  trad_merge_sort.c  trad_merge_sort.h  verbosity.c  verbosity.h
